--- a/backend/rest_webservice/src/main/resources/application.properties
+++ b/backend/rest_webservice/src/main/resources/application.properties
@@ -9,6 +9,7 @@ jwt.get.token.uri=/authenticate
 jwt.refresh.token.uri=/refresh
 jwt.http.request.header=Authorization
 jwt.token.expiration.in.seconds=604800
+spring.datasource.url=jdbc:h2:mem:testdb
 
-#spring.jpa.show-sql=true
-#spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
